--- a/hw2-xiaoxul/release.properties
+++ b/hw2-xiaoxul/release.properties
@@ -1,16 +1,16 @@
 #release configuration
-#Fri Oct 10 01:29:07 EDT 2014
+#Fri Oct 10 14:58:59 EDT 2014
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=hw2-xiaoxul-0.0.2
+scm.tag=hw2-xiaoxul-0.0.6
 pushChanges=true
 scm.url=scm\:git\:git@github.com\:xiaoxulv/hw2-xiaoxul.git
 preparationGoals=clean verify
 project.scm.edu.cmu.lti.11791.f14.hw2\:hw2-xiaoxul.connection=scm\:git\:git@github.com\:xiaoxulv/hw2-xiaoxul.git
-project.scm.edu.cmu.lti.11791.f14.hw2\:hw2-xiaoxul.tag=HEAD
-project.dev.edu.cmu.lti.11791.f14.hw2\:hw2-xiaoxul=0.0.3-SNAPSHOT
+project.scm.edu.cmu.lti.11791.f14.hw2\:hw2-xiaoxul.tag=hw2-xiaoxul-0.0.3
+project.dev.edu.cmu.lti.11791.f14.hw2\:hw2-xiaoxul=0.0.7-SNAPSHOT
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
 project.scm.edu.cmu.lti.11791.f14.hw2\:hw2-xiaoxul.developerConnection=scm\:git\:git@github.com\:xiaoxulv/hw2-xiaoxul.git
 exec.snapshotReleasePluginAllowed=false
-completedPhase=scm-commit-release
-project.rel.edu.cmu.lti.11791.f14.hw2\:hw2-xiaoxul=0.0.2
+completedPhase=end-release
+project.rel.edu.cmu.lti.11791.f14.hw2\:hw2-xiaoxul=0.0.6
